Placeholder for check email input field

--- a/webapp/home/templates/home/pages/list-of-institutions.html
+++ b/webapp/home/templates/home/pages/list-of-institutions.html
@@ -26,6 +26,14 @@
     to request the addition of your research institution to this list.
   </p>
 
+  <!-- Something like this: -->
+  <!--
+    <div class="border rounded textbox mb-5 p-3">
+    <p class="text-bf">Does my email address qualify?</p>
+    <input class="form-control is-invalid" type="text" placeholder="myemail@example.com">
+    <small class="text-danger">This email address is not qualified as an Australian Institution.</small>
+  </div> -->
+
   {% include 'home/snippets/about/list-of-institutions.html' %}
 </main>
 
