--- a/webapp/home/templates/home/snippets/footer.html
+++ b/webapp/home/templates/home/snippets/footer.html
@@ -4,15 +4,15 @@
   <div class="container logo">
     <div class="text-center">
       <a href="https://www.biocommons.org.au" target="_blank">
-        <img src="{% static 'logos/footer/au-biocommons.png' %}" />
+        <img src="{% static 'logos/footer/au-biocommons-2.png' %}" />
       </a>
 
       <a href="https://www.qcif.edu.au" target="_blank">
-        <img src="{% static 'logos/footer/qcif.png' %}" />
+        <img src="{% static 'logos/footer/qcif-2.png' %}" />
       </a>
 
       <a href="https://www.unimelb.edu.au" target="_blank">
-        <img src="{% static 'logos/footer/uni-melbourne.png' %}" />
+        <img src="{% static 'logos/footer/unimelb-2.png' %}" />
       </a>
 
       <a href="https://www.aarnet.edu.au" target="_blank">
