Update unimelb logo

--- a/webapp/home/templates/home/snippets/footer.html
+++ b/webapp/home/templates/home/snippets/footer.html
@@ -12,7 +12,7 @@
       </a>
 
       <a href="https://www.unimelb.edu.au" target="_blank">
-        <img src="{% static 'logos/footer/unimelb-2.png' %}" />
+        <img src="{% static 'logos/footer/unimelb-2.svg' %}" />
       </a>
 
       <a href="https://www.aarnet.edu.au" target="_blank">
