--- a/webapp/home/test/data/subsite/media/templates/intro.html
+++ b/webapp/home/test/data/subsite/media/templates/intro.html
@@ -8,7 +8,7 @@
 
   <p>
     You can
-    see the content used to generate this page
+    see the content used to generate this documentation page
     <a href="https://github.com/usegalaxy-au/galaxy-media-site/tree/export-lab-pages/webapp/home/test/data/subsite/media" target="_blank">
       here</a>,
     and a full working example of an exported Galaxy Lab page
