--- a/webapp/home/templates/home/pages/list-of-institutions.html
+++ b/webapp/home/templates/home/pages/list-of-institutions.html
@@ -27,7 +27,7 @@
 
   <p>
     Galaxy Australia provides advanced features and extended quotas to publicly funded Australian researchers, as described in our
-    <a href="#feature-catalogue">Feature Catalogue</a>.
+    <a href="/about#feature-catalogue">Feature Catalogue</a>.
     Access to these features and quotas is available to account holders registered using an email address from one of the Australian Research Institutions recognised as listed in the table below.
   </p>
 
