Global restyle galaxy blue

--- a/webapp/home/templates/home/requests/menu.html
+++ b/webapp/home/templates/home/requests/menu.html
@@ -16,7 +16,7 @@
   <div class="m-10" style="margin-top: 15vh;">
     <div class="card-group request-menu-cards">
       <div class="card">
-        <h1><span class="material-icons">help</span></h1>
+        <h1 class="ga-blue"><span class="material-icons">help</span></h1>
         <div class="card-body">
           <p>
             Need some assistance?
@@ -33,7 +33,7 @@
       </div>
 
       <div class="card">
-        <h1><span class="material-icons">construction</span></h1>
+        <h1 class="ga-blue"><span class="material-icons">construction</span></h1>
         <div class="card-body">
           <p>
             Thousands of tools are waiting to be installed from the
@@ -50,7 +50,7 @@
       </div>
 
       <div class="card">
-        <h1><span class="material-icons">save</span></h1>
+        <h1 class="ga-blue"><span class="material-icons">save</span></h1>
         <div class="card-body">
           <p>
             Need more data storage on Galaxy Australia?
@@ -67,7 +67,7 @@
       </div>
 
       <div class="card">
-        <h1><span class="material-icons">key</span></h1>
+        <h1 class="ga-blue"><span class="material-icons">key</span></h1>
         <div class="card-body">
           <p>
             Request access to specialised tools AlphaFold2, FGENESH++ and CellRanger
