--- a/webapp/home/templates/home/snippets/footer.html
+++ b/webapp/home/templates/home/snippets/footer.html
@@ -58,8 +58,8 @@
       <div class="col" id="footer-galaxy-logo">
         <a href="/">
           <img
-          src="{% static 'logos/footer/galaxy-black.svg' %}"
-          alt="Galaxy logo black"
+          src="{% static 'favicon/android-chrome-192x192.png' %}"
+          alt="Galaxy logo"
           >
         </a>
       </div>
