--- a/webapp/home/static/home/css/main.css
+++ b/webapp/home/static/home/css/main.css
@@ -1,5 +1,6 @@
 :root {
-  --color: #2C3143;
+  --color: #243e8f;
+  /* --color: #2C3143; */
   --tile-bg: #F8F9FA;
   --tile-bg-hover: #E8E9EA;
   --border: #70707033;
@@ -174,7 +175,7 @@ textarea.invalid {
 }
 .ga-btn {
   display: inline-block;
-  color: inherit;
+  color: var(--color);
   text-decoration: none;
   margin: .5rem;
   padding: .25rem .5rem;
@@ -232,6 +233,9 @@ span.action {
 /* Font */
 a {
   text-decoration: inherit;
+}
+.ga-blue {
+  color: var(--color);
 }
 .text-small {
   font-size: 0.8rem;
