--- a/webapp/home/templates/home/snippets/header-cards.html
+++ b/webapp/home/templates/home/snippets/header-cards.html
@@ -1,7 +1,7 @@
 <section class="row justify-content-between text-center" id="header-cards">
   <div class="tile">
     <div class="card-body">
-      <h1 class="card-title"><span class="material-icons">key</span></h1>
+      <h1 class="card-title ga-blue"><span class="material-icons">key</span></h1>
       <p>
         Request access to specialised tools AlphaFold2, FGENESH++ and CellRanger
       </p>
@@ -13,7 +13,7 @@
 
   <div class="tile">
     <div class="card-body">
-      <h1 class="card-title"><span class="material-icons">construction</span></h1>
+      <h1 class="card-title ga-blue"><span class="material-icons">construction</span></h1>
       <p>
         9000+
         <br>
@@ -29,7 +29,7 @@
 
   <div class="tile">
     <div class="card-body">
-      <h1 class="card-title"><span class="material-icons">save</span></h1>
+      <h1 class="card-title ga-blue"><span class="material-icons">save</span></h1>
       <p class="m-0">
         Additional storage
         <br>
