--- a/webapp/home/templates/home/requests/access/cellranger.html
+++ b/webapp/home/templates/home/requests/access/cellranger.html
@@ -37,12 +37,12 @@
 
   <p>
     <code>cellranger count</code>
-    takes FASTQ files from cellranger mkfastq and performs alignment, filtering, barcode counting, and UMI counting. It uses the Chromium cellular barcodes to generate feature-barcode matrices, determine clusters, and perform gene expression analysis. The count pipeline can take input from multiple sequencing runs on the same GEM well. cellranger count also processes Feature Barcode data alongside Gene Expression reads.
+    takes FASTQ files from <code>cellranger mkfastq</code> and performs alignment, filtering, barcode counting, and UMI counting. It uses the Chromium cellular barcodes to generate feature-barcode matrices, determine clusters, and perform gene expression analysis. The count pipeline can take input from multiple sequencing runs on the same GEM well. <code>cellranger count</code> also processes Feature Barcode data alongside Gene Expression reads.
   </p>
 
   <p>
     <code>cellranger mkgft</code>
-    a simple utility to filter genes based on their key-value pairs in the GTF attribute column.
+    is a simple utility to filter genes based on their key-value pairs in the GTF attribute column.
   </p>
 
   <p class="mb-10">
