Add ga-btn blue border

--- a/webapp/home/static/home/css/main.css
+++ b/webapp/home/static/home/css/main.css
@@ -182,7 +182,7 @@ textarea.invalid {
   min-width: 150px;
   text-align: center;
   background-color: var(--tile-bg);
-  border: 2px solid var(--color-dark);
+  border: 2px solid var(--color);
   border-radius: .25rem;
   transition-duration: .25s;
 }
