Stop AlphaFold 2 text from wrapping

--- a/webapp/home/templates/home/requests/access/index.html
+++ b/webapp/home/templates/home/requests/access/index.html
@@ -42,7 +42,8 @@
       <div class="card">
         <div class="card-body">
           <p class="my-0">
-            Predict protein structures with AlphaFold 2
+            Predict protein structures with
+            <span style="white-space: nowrap">AlphaFold 2</span>
           </p>
         </div>
 
