--- a/webapp/home/templates/home/subdomains/exported.html
+++ b/webapp/home/templates/home/subdomains/exported.html
@@ -28,7 +28,7 @@
 
 <main>
   {% comment %}
-  <!-- These need to be configurable/templatable as appropriate -->
+  <!-- Modals should be included in intro/conclusion templates as appropriate -->
   {% include 'home/subdomains/components/genome-community-modal.html' %}
   {% include 'home/subdomains/components/info-modal.html' with subdomain='genome' site_name="Genome Lab" researchers="genomics" %}
   {% include 'home/subdomains/components/feedback.html' with subdomain='genome' %}
