--- a/webapp/home/static/home/css/subdomains/main.css
+++ b/webapp/home/static/home/css/subdomains/main.css
@@ -27,7 +27,10 @@ code {
   padding-bottom: 1rem;
 }
 .table-inputs td {
-  padding: .2rem .5rem;
+  padding: .5rem 1rem;
+}
+.table-inputs tr:not(:last-child) td {
+  border-bottom: 1px solid #ccc;
 }
 
 /* BS override */
