--- a/webapp/home/templates/home/subdomains/components/inputs.html
+++ b/webapp/home/templates/home/subdomains/components/inputs.html
@@ -1,3 +1,5 @@
+{% load markdown %}
+
 <p><em>Input data:</em></p>
 <table class="table-inputs mx-3">
   {% for input in inputs %}
@@ -8,7 +10,7 @@
       <code>{{ datatype }}</code>
       {% endfor %}
     </td>
-    <td>{{ input.label|safe }}</td>
+    <td>{{ input.label|markdown|safe }}</td>
   </tr>
   {% endfor %}
 </table>
