--- a/webapp/home/templates/home/subdomains/exported.html
+++ b/webapp/home/templates/home/subdomains/exported.html
@@ -42,23 +42,23 @@
     {{ lab_name|upper }}
   </section>
 
-  {% if snippets.intro_html %}
-  {{ snippets.intro_html|safe }}
+  {% if snippets.intro_md %}
+  {{ snippets.intro_md|safe }}
   {% endif %}
 
   {% for section in sections %}
     {% include 'home/subdomains/components/section.html' with section=section %}
   {% endfor %}
 
-  {% if snippets.conclusion_html %}
-  {{ snippets.conclusion_html|markdown|safe }}
+  {% if snippets.conclusion_md %}
+  {{ snippets.conclusion_md|markdown|safe }}
   {% endif %}
 
 </main>
 
 
-{% if snippets.footer_html %}
-{{ snippets.footer_html|markdown|safe }}
+{% if snippets.footer_md %}
+{{ snippets.footer_md|markdown|safe }}
 {% endif %}
 
 {% endblock %}
