Create simple markdown lab page

--- a/webapp/home/labs/docs/templates/intro.html
+++ b/webapp/home/labs/docs/templates/intro.html
@@ -6,14 +6,21 @@
     pointing to your own remote content.
   </p>
 
-  <p>
-    You can
-    see the content used to generate this documentation page
-    <a href="https://github.com/usegalaxy-au/galaxy-media-site/tree/dev/webapp/home/labs/docs" target="_blank">
-      here</a>,
-    and a full working example of an exported Galaxy Lab page
-    <a href="/lab/export?content_root=http://{{ HOSTNAME }}/static/home/labs/genome/main.yml">here</a>.
-  </p>
+  <ul>
+    <li>See the content used to generate this documentation page
+      <a href="https://github.com/usegalaxy-au/galaxy-media-site/tree/dev/webapp/home/labs/docs" target="_blank">
+        here.
+      </a>
+    </li>
+    <li>
+      See a full working example of an exported Galaxy Lab page
+      <a href="/lab/export?content_root=http://{{ HOSTNAME }}/static/home/labs/genome/main.yml">here</a>.
+    </li>
+    <li>
+      See a minimal working example of a lab page
+      <a href="/lab/export?content_root=http://{{ HOSTNAME }}/static/home/labs/simple/main.yml">here</a>.
+    </li>
+  </ul>
 
   <p>
     This custom introductory text was pulled down from GitHub and rendered in real time.
