--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -42,9 +42,9 @@
   <a href="https://www.unimelb.edu.au/" target="_blank">The University of Melbourne</a>,
   <a href="https://www.qcif.edu.au/" target="_blank">QCIF</a>,
   <a href="https://pawsey.org.au/" target="_blank">Pawsey Supercomputing Research Centre</a>,
-  <a href="https://nci.org.au/" target="_blank">National Computational Infrastructure</a>
-  <a href="https://www.aarnet.edu.au/" target="_blank">AARNet</a>
-  <a href="https://ardc.edu.au/services/ardc-nectar-research-cloud/" target="_blank">ARDC Nectar Research Cloud</a>
+  <a href="https://nci.org.au/" target="_blank">National Computational Infrastructure</a>,
+  <a href="https://www.aarnet.edu.au/" target="_blank">AARNet</a>,
+  <a href="https://ardc.edu.au/services/ardc-nectar-research-cloud/" target="_blank">ARDC Nectar Research Cloud</a>,
   and
   <a href="https://azure.microsoft.com/" target="_blank">Microsoft Azure</a>.
 </p>
