--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -19,8 +19,11 @@
 
 <div class="textbox">
   <p class="fst-italic">
-    "This work is supported by Galaxy Australia, a service provided by the Australian BioCommons and its partners. The service receives NCRIS funding through Bioplatforms Australia,
+    "This work is supported by Galaxy Australia, a service provided by Australian BioCommons and its partners. The service receives NCRIS funding through Bioplatforms Australia,
     as well as The University of Melbourne and Queensland Government RICF funding."
+  </p>
+  <p>Please also cite the Galaxy publication:</p>
+  <p>The Galaxy Community, The Galaxy platform for accessible, reproducible, and collaborative data analyses: 2024 update, <i>Nucleic Acids Research</i>, Volume 52, Issue W1, 5 July 2024, Pages W83–W94, <a href="https://doi.org/10.1093/nar/gkae410/" target="_blank">https://doi.org/10.1093/nar/gkae410/</a>
   </p>
 </div>
 
