Fix syntax and styling

--- a/webapp/home/static/home/css/main.css
+++ b/webapp/home/static/home/css/main.css
@@ -198,7 +198,7 @@ textarea.invalid {
 .material-icons {
   vertical-align: bottom;
 }
-i {
+i.fa, i.fab, i.fas {
   margin: 0 .5rem;
 }
 .unpublished-bubble {
