--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -18,12 +18,18 @@
 <p>When you use Galaxy Australia to support your publication or project, please acknowledge its use with the following statement: </p>
 
 <div class="textbox">
-  <p class="fst-italic">
-    "This work is supported by Galaxy Australia, a service provided by Australian BioCommons and its partners. The service receives NCRIS funding through Bioplatforms Australia,
-    as well as The University of Melbourne and Queensland Government RICF funding."
+  <p>
+    <em>
+      "This work is supported by Galaxy Australia, a service provided by Australian BioCommons and its partners. The service receives NCRIS funding through Bioplatforms Australia,
+      as well as The University of Melbourne and Queensland Government RICF funding."
+    </em>
   </p>
-  <p>Please also cite the Galaxy publication:</p>
-  <p>The Galaxy Community, The Galaxy platform for accessible, reproducible, and collaborative data analyses: 2024 update, <i>Nucleic Acids Research</i>, Volume 52, Issue W1, 5 July 2024, Pages W83–W94, <a href="https://doi.org/10.1093/nar/gkae410/" target="_blank">https://doi.org/10.1093/nar/gkae410/</a>
+  <b>Please also cite the Galaxy publication:</b>
+  <p>
+    <small>
+      The Galaxy Community, The Galaxy platform for accessible, reproducible, and collaborative data analyses: 2024 update, <i>Nucleic Acids Research</i>, Volume 52, Issue W1, 5 July 2024, Pages W83-W94,
+      <a href="https://doi.org/10.1093/nar/gkae410/" target="_blank">https://doi.org/10.1093/nar/gkae410/</a>
+    </small>
   </p>
 </div>
 
