--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -17,7 +17,7 @@
 
 <p>When you use Galaxy Australia to support your publication or project, please acknowledge its use with the following statement: </p>
 
-<div class="textbox">
+<div style="margin: 2rem 4rem 4rem 4rem;">
   <p>
     <em>
       "This work is supported by Galaxy Australia, a service provided by Australian BioCommons and its partners. The service receives NCRIS funding through Bioplatforms Australia,
