--- a/webapp/home/templates/home/subdomains/components/inputs.html
+++ b/webapp/home/templates/home/subdomains/components/inputs.html
@@ -10,7 +10,7 @@
       <code>{{ datatype }}</code>
       {% endfor %}
     </td>
-    <td>{{ input.label|markdown|safe }}</td>
+    <td>{{ input.label|markdown }}</td>
   </tr>
   {% endfor %}
 </table>
