--- a/webapp/news/templates/news/article.html
+++ b/webapp/news/templates/news/article.html
@@ -60,7 +60,7 @@
     <br><br>
 
     <div class="container markdown" id="article-body">
-      {{ article.body|markdown|safe }}
+      {{ article.body|markdown }}
     </div>
 
     <div class="container text-center">
