--- a/webapp/home/templates/home/subdomains/components/accordion.html
+++ b/webapp/home/templates/home/subdomains/components/accordion.html
@@ -52,12 +52,15 @@
             <a
               href="{{ item.button_link }}"
               class="btn btn-galaxy"
-              {% if item.button_link|first != '/' %}target="_blank"{% endif %}
               title="{{ item.button_tip|default:'Run tool' }}"
               data-bs-toggle="tooltip"
               data-bs-placement="bottom"
             >
+              {% if item.button_icon %}
+              <span class="material-icons">{{ item.button_icon|iconkey }}</span>
+              {% else %}
               {{ item.button_md|markdown|default:'<span class="material-icons">play_arrow</span>' }}
+              {% endif %}
             </a>
           </div>
           {% endif %}
